--- a/assets/img/favicon/site.webmanifest.json
+++ b/assets/img/favicon/site.webmanifest.json
@@ -4,16 +4,16 @@
   "description": "Licensed Civil Engineer & Project Manager delivering Architecture and Engineering projects across India and the U.S.",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#00ffff",
+  "background_color": "#ffffff",
+  "theme_color": "#008073",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "assets/img/favicon/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "assets/img/favicon/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
